kubernetes/apps/networking/homelab/getferdi/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: getferdi
  namespace: networking
spec:
  ports:
    - name: getferdi-app
      port: 80
      protocol: TCP
      targetPort: 80
  type: ClusterIP
